@@ -1,3 +1,10 @@
+2011-04-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/editor.c:
+   Fix snippets bug: {ob}pc{cb} replaced by '%' instead of {pc}.
+   Refactor snippets_make_replacements() using geany_cursor_marker.
+
+
 2011-04-13  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/editor.c:
